--- a/retirement/index.html
+++ b/retirement/index.html
@@ -34,7 +34,7 @@
 
         <div>
             <h3>Accessing Original Content</h3>
-            <p>If you have followed a link to one of the blog's posts, you can still access content if you run the blog locally. The blog used NEXT.js and you run it with the following commands. Once the blog loads you can navigate to your link's relative location.</p>
+            <p>If you have followed a link to one of the blog's posts, you can still access content if you run the blog locally. The blog used NEXT.js and you run it locally, at <i>http://localhost:3000</i>, using the following commands. Once the blog loads you can navigate to your link's relative location.</p>
 
             <p class='indent'>
                 <i>git clone https://github.com/gary-archer/apisandclients.com</i><br/>
