--- a/retirement/index.html
+++ b/retirement/index.html
@@ -12,14 +12,14 @@
         <div>
             <h3>Original Content</h3>
             <p>
-                Originally this domain hosted a blog with posts related to APIs and clients that use OAuth security. In addition to explaining integrations, I also discussed some design considerations. There was a particular focus on developer setups and reliability.
+                Originally this domain hosted a blog with posts related to APIs and clients that use OAuth security. The posts explained integrations, with a particular focus on developer setups and reliability.
             </p>
         </div>
 
         <div>
             <h3>Improved Content</h3>
             <p>
-                I no longer host this blog's content online, since I consider content to be superseded by the O'Reilly book that I have cowritten with colleagues of mine at Curity. The book explains a much more complete OAuth architectural journey, and has been reviewed by multiple parties:
+                I no longer host this blog's content online. Instead, see the following O'Reilly book, which I cowrote with my Curity colleagues. It explains a much more complete OAuth architectural journey:
             </p>
 
             <ul>
@@ -34,7 +34,7 @@
 
         <div>
             <h3>Accessing Original Content</h3>
-            <p>If you have followed a link to one of the blog's posts, you can still access content if you run the blog locally. The blog used NEXT.js and you run it locally, at <i>http://localhost:3000</i>, using the following commands. Once the blog loads you can navigate to your link's relative location.</p>
+            <p>If you have followed a link to one of the blog's posts, you can still access content if you run the blog locally. The blog uses NEXT.js and you can run it at <i>http://localhost:3000</i> with the following commands. Once the blog loads you can navigate to your link's relative location.</p>
 
             <p class='indent'>
                 <i>git clone https://github.com/gary-archer/apisandclients.com</i><br/>
